change dd package

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
   "repository": "https://github.com/dtan4/sendgrid2datadog",
   "keywords": ["go", "golang", "sendgrid", "datadog", "relay"],
   "env": {
-    "DATADOG_API_KEY": {
+    "DD_API_KEY": {
       "description": "API key of Datadog"
     },
     "HEROKU_APP_NAME": {
@@ -13,7 +13,7 @@
   },
   "buildpacks": [
     {
-      "url": "https://github.com/miketheman/heroku-buildpack-datadog.git"
+      "url": "https://github.com/DataDog/heroku-buildpack-datadog.git"
     },
     {
       "url": "https://github.com/heroku/heroku-buildpack-go"
